--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.13
   device_information: ^0.0.4
+  internet_connection_checker: ^0.0.1+3
 
 dev_dependencies:
   flutter_test:
