--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.0.13
   device_information: ^0.0.4
   internet_connection_checker: ^0.0.1+3
+  dart_jsonwebtoken: ^2.4.1
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +77,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Cujae.png
-  #   - images/a_dot_ham.jpeg
+    - passphrase/password
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
